--- a/StegoLine.csproj
+++ b/StegoLine.csproj
@@ -11,19 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="MainWindowHelpers.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="MainWindowHelpers.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.16.0" />
     <PackageReference Include="itext7" Version="7.2.2" />
     <PackageReference Include="MahApps.Metro" Version="2.4.9" />
     <PackageReference Include="MahApps.Metro.IconPacks" Version="4.11.0" />
-    <PackageReference Include="Portable.BouncyCastle" Version="1.9.0" />
     <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="6.0.0" />
   </ItemGroup>
@@ -71,6 +62,13 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Reveal.Designer.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="Localization\Language.en-US.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
 
 </Project>
